--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   </head>
   <body>
     <div class="card">
-      <img src="/avatar.jpg" alt="Аватар" class="avatar" />
+      <img src="avatar.jpg" alt="Аватар" class="avatar" />
       <h1>Чингиз Сарманов</h1>
       <p>
         Просто человек, который любит делать красиво и понятно. Вижу — решаю —
