--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Моя визитка</title>
+    <title>⠀</title>
+    <link rel="icon" href="icon.png" type="image/png" />
+
     <style>
       body {
         margin: 0;
@@ -70,7 +72,7 @@
   </head>
   <body>
     <div class="card">
-      <img src="avatar.jpg" alt="Аватар" class="avatar" />
+      <img src="/avatar.jpg" alt="Аватар" class="avatar" />
       <h1>Чингиз Сарманов</h1>
       <p>
         Просто человек, который любит делать красиво и понятно. Вижу — решаю —
